--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Doug Reynolds
 
 # Short bio or description (displayed in the header)
-description: Web Application Developer
+description: Musician and Web Application Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/1187320?v=3&s=460
@@ -22,10 +22,10 @@ footer-links:
   facebook:
   flickr:
   github: DougReynolds
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
+  instagram: _dougreynolds
+  linkedin: douglasreynolds
+  pinterest: dougrdotnet
+  rss: feed # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: _DougReynolds
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
@@ -34,14 +34,14 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: dougrey
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-3871595-10
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://dougreynolds.github.io/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
